Refactor mark cells
