# src/main/java/com/codeonblue/minesweeper/controller/GameController.java
@@ -1,16 +1,13 @@
 package com.codeonblue.minesweeper.controller;
 
 import com.codeonblue.minesweeper.dto.CellReveledResponse;
-import com.codeonblue.minesweeper.dto.CellStatus;
 import com.codeonblue.minesweeper.dto.CreatedGameResponse;
-import com.codeonblue.minesweeper.dto.MarkCellRequest;
 import com.codeonblue.minesweeper.dto.MarkCellResponse;
 import com.codeonblue.minesweeper.service.GameService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -39,23 +36,8 @@ public class GameController {
     @PostMapping("/games/{gameId}/cells/{cellId}/mark")
     public ResponseEntity<MarkCellResponse> markCell(
             @PathVariable String gameId,
-            @PathVariable String cellId,
-            @RequestBody MarkCellRequest markCellRequest
+            @PathVariable String cellId
     ) {
-        CellStatus cellStatus;
-
-        switch (markCellRequest.getCellCurrentStatus()) {
-            case "UNCHECKED": cellStatus = CellStatus.FLAGGED;
-                break;
-            case "FLAGGED": cellStatus = CellStatus.QUESTION_MARK;
-                break;
-            case "QUESTION_MARK": cellStatus = CellStatus.UNCHECKED;
-                break;
-            default:
-                throw new IllegalStateException("Unexpected value: " + markCellRequest.getCellCurrentStatus());
-        }
-
-        final MarkCellResponse markCellResponse = new MarkCellResponse(cellStatus);
-        return new ResponseEntity<>(markCellResponse, HttpStatus.OK);
+        return new ResponseEntity<>(gameService.markCellAndReturnResponse(gameId, cellId), HttpStatus.OK);
     }
 }
