# src/main/java/com/codeonblue/minesweeper/controller/handler/StandardError.java
@@ -1,0 +1,61 @@
+package com.codeonblue.minesweeper.controller.handler;
+
+public class StandardError {
+
+    private Long timeStamp;
+
+    public Long getTimeStamp() {
+        return timeStamp;
+    }
+
+    public void setTimeStamp(Long timeStamp) {
+        this.timeStamp = timeStamp;
+    }
+
+    public Integer getStatus() {
+        return status;
+    }
+
+    public void setStatus(Integer status) {
+        this.status = status;
+    }
+
+    public String getError() {
+        return error;
+    }
+
+    public void setError(String error) {
+        this.error = error;
+    }
+
+    public String getMessage() {
+        return message;
+    }
+
+    public void setMessage(String message) {
+        this.message = message;
+    }
+
+    public String getPath() {
+        return path;
+    }
+
+    public void setPath(String path) {
+        this.path = path;
+    }
+
+    private Integer status;
+    private String error;
+    private String message;
+    private String path;
+
+    public StandardError() {}
+
+    public StandardError(Long timeStamp, Integer status, String error, String message, String path) {
+        this.timeStamp = timeStamp;
+        this.status = status;
+        this.error = error;
+        this.message = message;
+        this.path = path;
+    }
+}
