# src/main/resources/static/api-docs-swagger.yaml
@@ -56,6 +56,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CellReveledResponse"
+        404:
+          description: CellId or GameId not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResourceNotFoundResponse"
         405:
           description: Method not allowed error
           content:
@@ -82,13 +88,6 @@ paths:
           required: true
           schema:
             type: integer
-      requestBody:
-        description: Mark cell request
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MarkCellRequest'
       responses:
         200:
           description: Cell marked successfully
@@ -96,6 +95,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/MarkCellResponse"
+        404:
+          description: CellId or GameId not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResourceNotFoundResponse"
         405:
           description: Method not allowed error
           content:
@@ -142,6 +147,30 @@ components:
           type: string
           description: Game id
           example: "3160c9de-b152-4886-ae52-41f670c493e9"
+    ResourceNotFoundResponse:
+      type: object
+      properties:
+        timestamp:
+          type: string
+          description: timestamp of the response
+          example: "2020-05-30T21:09:11.897+0000"
+        status:
+          type: integer
+          description: http status code
+          example: 404
+        error:
+          type: string
+          description: Description of the error
+          example: "Resource was not found"
+        message:
+          type: string
+          description: Message of the response
+          example: "CellId was not found"
+        path:
+          type: string
+          description: Path called
+          example: "/games/3160c9de-b152-4886-ae52-41f670c493e9/cells/99"
+
     MethodNotAllowedErrorResponse:
       type: object
       properties:
